grammar.tex
\documentclass{article}
\usepackage{syntax}

\begin{document}
\paragraph{}
\paragraph{AGPL Syntax}
\begin{grammar}
<game> ::= `Gamestate:{' [<gamestate>] `}'\\
           `Player:{' <Dec> `}'\\
           `Move:{' <Dec> `}'\\
           `isVailid:{' <Exp> `}'\\
           `possMoves:{' <Exp> `}'\\
           `outcome:{' <Outcome> `}'\\
           `initialState:{' <InitState> `}'\\
           `fromString:{' <Exp> `}'\\
           `$' [<Dec>] `$' (Custom declarations)
           

%% <gamestatelist> ::= <gamestate> <gamestatelist>
%% \alt <empty>


<gamestate> ::= `Board:{' <BoardDec>
\alt `Piece:{' <Dec>
\alt `Hand:{' <Dec>
\alt `Turn:{' <Dec>
\alt <string>`:{' <Dec>

<BoardDec> ::= `{Matrix['<int>`]['<int>`]}'
\alt `{Array['<int>`]'
\alt `<<' <Dec> `>>' (Custom Type)

<Outcome> ::= `{winCondition:{' <Exp> `}'\\
               `tieCondition:{' <Exp> `}'\\
               `else:{' <Exp> `}'
\alt `<<' <Exp> `>>'

<InitState> ::= `Board:' <BoardInitDec>\\
                `Turn:{' <Exp> `}'

<BoardInitDec> ::= `{ all' <Exp> `}' (Initialize board to piece)
\alt `{' <Exp> `}' (Initialize board to List literal)
\alt `<<' <Exp> `>>' (Custom initialization func.)

<Exp> ::= <Template Haskell Expression>

<Dec> ::= <Template Haskell Declaration>

\end{grammar}
\end{document}
